--- a/css/styles.css
+++ b/css/styles.css
@@ -129,5 +129,12 @@ div.icon-about ~ h4{
 }
 
 .card{
+    box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, .1);
     padding: 50px 40px;
+}
+
+.card h5 {
+    font-size: 25px;
+    line-height: 35px;
+    font-weight: 600;
 }
