--- a/css/styles.css
+++ b/css/styles.css
@@ -138,3 +138,13 @@ div.icon-about ~ h4{
     line-height: 35px;
     font-weight: 600;
 }
+
+.card-testimonial{
+    background: #00bcd5;
+    border-style: none;
+}
+
+.card-testimonial .fa ,
+.card-testimonial p {
+    color: #fff;
+}
