--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 5% 0;
 }
 
+.news-section{
+    margin: 8% 0;
+}
+
 .about-title > h4{
     font-size: 32px;
     color: #353c4e;
@@ -147,4 +151,38 @@ div.icon-about ~ h4{
 .card-testimonial .fa ,
 .card-testimonial p {
     color: #fff;
+}
+
+.img-perfil{
+    width: 23%;
+    margin: .5em 1em 0 1em;
+}
+
+.img-perfil img {
+    border-radius: 50%;
+}
+
+.blog-info h5{
+    font-size: 16px;
+    font-weight: 600;
+    color: #999;
+    letter-spacing: 0.5px;
+}
+
+.blog-info h4{
+    font-size: 23px;
+    text-transform: capitalize;
+    font-weight: 600;
+    color: #353c4e;
+}
+
+.btn-banner{
+    background: #00bcd5;
+    border-radius: 0px;
+    color: #fff;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 10px 25px;
+    display: inline-block;
+    text-decoration: none;
 }
