--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,19 @@
-*{
+* {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-header{
+header {
     background: #00bcd5;
 }
 
-.header-top{
+.header-top {
     padding: 0.5em 0;
     background-color: #333;
     color: #FFF;
 }
 
-p{
+p {
     margin: 0;
     line-height: 1.9em;
     color: #777;
@@ -22,13 +22,23 @@ p{
     font-family: 'Open Sans', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
     letter-spacing: 1px;
     font-family: 'Dosis', sans-serif;
 }
 
-.button-nav{
+a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.button-nav {
     background: #ffffff;
     border: 2px #ffffff solid;
     border-radius: 5px;
@@ -37,12 +47,12 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 10px;
 }
 
-.nav-link{
+.nav-link {
     padding: 10px 10px;
     color: #fff;
 }
 
-.text-banner{
+.text-banner {
     margin: 23% 1%;
 }
 
@@ -54,34 +64,34 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
-.btn-banner{
+.btn-banner {
     border-radius: 0px;
     font-size: 16px;
-    color:#fff;
+    color: #fff;
     font-size: 16px;
     padding: 10px 25px;
     border-radius: 0%;
 }
 
-.btn-banner-1{
-    border-style:none;
+.btn-banner-1 {
+    border-style: none;
     background: #00bcd5;
 }
 
-.btn-banner-1:hover{
+.btn-banner-1:hover {
     background: #00bcd5;
 }
 
-.btn-banner-2{
-    border-style:none;
+.btn-banner-2 {
+    border-style: none;
     background: #ed948e;
 }
 
-.btn-banner-2:hover{
+.btn-banner-2:hover {
     background: #ed948e;
 }
 
-.text-banner h3{
+.text-banner h3 {
     font-size: 4em;
     color: #353c4e;
     line-height: 75px;
@@ -92,21 +102,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .about-section,
-.what-we-do-section{
+.what-we-do-section {
     margin: 5% 0;
 }
 
-.news-section{
+.news-section {
     margin: 8% 0;
 }
 
-.about-title > h4{
+.about-title>h4 {
     font-size: 32px;
     color: #353c4e;
     text-transform: capitalize;
 }
 
-.icon{
+.icon {
     background: #00bcd5;
     height: 80px;
     width: 80px;
@@ -114,13 +124,13 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 50%;
 }
 
-.icon .fa{
+.icon .fa {
     font-size: 2em;
     color: white;
     margin: 25% 0;
 }
 
-div.icon-about ~ h4{
+div.icon-about~h4 {
     text-transform: uppercase;
     font-size: 1em;
     margin: 1em 0;
@@ -128,11 +138,11 @@ div.icon-about ~ h4{
     font-weight: 600;
 }
 
-.what-we-do-section{
+.what-we-do-section {
     background: #f8f9fa;
 }
 
-.card{
+.card {
     box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, .1);
     padding: 50px 40px;
 }
@@ -143,17 +153,17 @@ div.icon-about ~ h4{
     font-weight: 600;
 }
 
-.card-testimonial{
+.card-testimonial {
     background: #00bcd5;
     border-style: none;
 }
 
-.card-testimonial .fa ,
+.card-testimonial .fa,
 .card-testimonial p {
     color: #fff;
 }
 
-.img-perfil{
+.img-perfil {
     width: 23%;
     margin: .5em 1em 0 1em;
 }
@@ -162,21 +172,21 @@ div.icon-about ~ h4{
     border-radius: 50%;
 }
 
-.blog-info h5{
+.blog-info h5 {
     font-size: 16px;
     font-weight: 600;
     color: #999;
     letter-spacing: 0.5px;
 }
 
-.blog-info h4{
+.blog-info h4 {
     font-size: 23px;
     text-transform: capitalize;
     font-weight: 600;
     color: #353c4e;
 }
 
-.btn-banner{
+.btn-banner {
     background: #00bcd5;
     border-radius: 0px;
     color: #fff;
@@ -187,13 +197,13 @@ div.icon-about ~ h4{
     text-decoration: none;
 }
 
-.appointment-section{
+.appointment-section {
     background: #00bcd5;
 }
 
 .appointment-section h4,
 .appointment-section p,
-.appointment-section a{
+.appointment-section a {
     color: #fff;
 }
 
@@ -203,9 +213,68 @@ div.icon-about ~ h4{
     letter-spacing: 5px;
 }
 
-.appointment-section a{
+.appointment-section a {
     border: 3px white solid;
     width: 20%;
     margin: 0 auto;
     padding: 1% 0;
+}
+
+footer,
+.section-copyright {
+    background: #000000;
+}
+
+footer h4 {
+    color: #eee;
+}
+
+.footer-dental-health h5 {
+    color: #777;
+}
+
+.footer-dental-health h5 span {
+    color: #00bcd5;
+}
+
+.footer-quick-links a {
+    color: #777;
+}
+
+.form-email input[type="email"] {
+    background: #fff;
+    border: none;
+    padding: 10px 10px;
+    color: #777;
+    font-size: 14px;
+    letter-spacing: 1px;
+    box-shadow: none;
+    width: 70%;
+}
+
+.form-email button,
+.form-email button:focus-visible {
+    background: #00bcd5;
+    border-style: none;
+    border-radius: 0;
+    color: white;
+    letter-spacing: 1px;
+    font-size: 14px;
+    width: 30%;
+}
+
+.form-email button:hover {
+    background: #00bcd5;
+}
+
+.section-copyright {
+    border-top: 1px solid #555;
+}
+
+.section-copyright a {
+    font-size: 15px;
+    color: #777;
+    font-weight: normal;
+    letter-spacing: .5px;
+    font-family: 'Open Sans', sans-serif;
 }
