--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,20 @@ a {
     color: #ffffff;
 }
 
+.fa {
+    color: #00bcd5;
+}
+
+.logo h1{
+    font-size: 1.5em;
+    color: #fff;
+    font-weight: 600;
+}
+
+.logo .fa {
+    color: #fff;
+}
+
 .button-nav {
     background: #ffffff;
     border: 2px #ffffff solid;
